# modelisation

./: CMakeLists.txt  distrib.hpp  mesh_functions.cpp  mesh_functions.hpp  poly_starter.cpp  starter_defs.h  test.off  test_colored.off
data/: sphere.off
